@@ -8,11 +8,11 @@ WriteMakefile(
 	      'OBJECT'	=> 'rpm.o constant.o',
 	      'VERSION_FROM' => 'rpm.pm',		# finds $VERSION
 	      'MAKEFILE'=> 'PMakefile',
-	      'LIBS'	=> [' -L/usr/local/lib  -ldb1 -lz -lbz2'],			# e.g., '-lm' 
+	      'LIBS'	=> [' -L/usr/local/lib -R/usr/local/lib  -L/usr/ucblib -R/usr/ucblib  -lnsl -lsocket -ldb -lz -lbz2'],			# e.g., '-lm' 
 	      'CCFLAGS' => '-g -O2 -D_GNU_SOURCE -Wall -Wpointer-arith -Wstrict-prototypes -Wmissing-prototypes -Wno-char-subscripts',
 	      'OPTIMIZE'=> '-g',
 	      'DEFINE'	=> '-Dbool=char -DHAS_BOOL',
-	      'INC'	=> ' -I../build -I../lib -I../popt -I/usr/include/rpm',
+	      'INC'	=> ' -I/usr/local/include -I$(top_builddir)/misc -I../build -I../lib -I../popt -I/usr/include/rpm',
 	      'depend'	=> { 'rpm.c' => 'transaction.xs header.xs db.xs' },
 );
 
